# makeAiFactory

./: .gitignore  3段サンプラー_master_api.json  CLAUDE.md  README.en.md  README.ko.md  README.md  README.zh.md  discord_bot.py  discord_bot_config.json.example  makeAiFactory.spec  makeaifactory_launcher.py  makeimg_launcher.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  translate-readme.yml
app/i18n/: en.json  ko.json  zh.json
app/manifest/: custom_nodes_manifest.json  custom_nodes_manifest_img.json  model_manifest.json  model_manifest_img.json  runtime_manifest.json  runtime_manifest_img.json
app/workflow/: makeAiFactory_api_source.json  workflow_analysis_report.md  (+2 more)
devs/: 画像用_master_api.json
tests/: test_atomic_json.py  test_batch_output.py  test_cuda_detection.py  test_diagnostics.py  test_discord_guard.py  test_downloader.py  test_error_report_security.py  test_generation_cancel.py  test_generation_executor.py  test_generation_gate.py  test_generation_helpers.py  test_hash_verifier.py  test_i18n.py  test_manifest_loader.py  test_model_manifest.py  test_model_validity.py  test_output_resolver.py  test_progress_tracker.py  test_remote_abuse.py  test_remote_lifecycle.py  test_remote_ownership.py  test_repair_manager.py  test_retention.py  test_safe_extract.py  test_terms_version.py  test_token_storage.py  test_version_consistency.py  test_workflow_patcher.py  test_workflow_presets.py  test_workflow_runtime_paths.py  test_workflow_sanitizer.py
tools/: create_icon.py  fetch_error_reports.py  generate_complete_se.py  sync_i18n.py  translate_readme.py
(+108 files in other folders)
