[project]
name = "makeaifactory"
version = "0.6.0"
description = "ComfyUI/Wan2.2を隠蔽したD&D動画生成アプリ"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.8.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makeaifactory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
